# PyDESeq2

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py  test.py
.binder/: postBuild  requirements.txt
.codeboarding/: Core_Data_Pipeline.md  Core_Utilities_Math.md  Data_Normalization.md  Differential_Expression_Analysis.md  Statistical_Modeling_Inference.md  on_boarding.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pr_validation.yml
ci/: run_local_test.py  send_slack_report.py
datasets/: README.md
datasets/synthetic/: test_clinical.csv  test_counts.csv
docs/: Makefile  README.md  requirements.txt
docs/source/: conf.py  index.rst  modules.rst  pydeseq2.rst  refs.bib
docs/source/_static/: fonts.css  owkin.css  sidebar.css
docs/source/api/: DeseqDataSet.rst  DeseqStats.rst  grid_search.rst  index.rst  preprocessing.rst  utils.rst
docs/source/auto_examples/: index.rst  plot_minimal_pydeseq2_pipeline.ipynb  plot_minimal_pydeseq2_pipeline.py  plot_minimal_pydeseq2_pipeline.py.md5  plot_minimal_pydeseq2_pipeline.rst  plot_minimal_pydeseq2_pipeline_codeobj.pickle  plot_step_by_step.ipynb  plot_step_by_step.py.md5  plot_step_by_step.rst  plot_step_by_step_codeobj.pickle  sg_execution_times.rst
docs/source/usage/: contributing.rst  getting_started.rst  installation.rst  references.rst  requirements.rst
examples/: plot_minimal_pydeseq2_pipeline.py  plot_pandas_io_example.py  plot_pytximport_example.py  plot_real_data_pydeseq2_example.py  plot_step_by_step.py
notebooks/: DESeq2_example_pipeline.ipynb  DESeq2_step_by_step_pipeline.ipynb  PyDESeq2_example_pipeline.ipynb  PyDESeq2_minimal_example.ipynb  PyDESeq2_step_by_step_pipeline.ipynb  README.md  index.ipynb
pydeseq2/: DeseqDataSet.py  DeseqStats.py  __init__.py  __version__.py  _formulaic.py  dds.py  default_inference.py  ds.py  grid_search.py  inference.py  interaction_utils.py  jax_utils.py  preprocessing.py  time_utils.py  utils.py
tests/: discover.py  test_build_design_matrix.py  test_dds_creation.py  test_docstring.py  test_edge_cases.py  test_formulaic.py  test_interaction_utils.py  test_pydeseq2.py  test_pytximport.py  test_utils.py
tests/data/: README.md  r_test_dispersions.csv  r_test_res.csv  test_clinical.csv
tests/data/continuous/: r_test_dispersions.csv  r_test_lfc_shrink_res.csv  r_test_res.csv  r_test_res_outliers.csv  r_test_size_factors.csv  test_counts.csv  test_metadata.csv
tests/data/interactions/: r_design_matrix_condition+group_condition.csv  r_design_matrix_group_condition+group.csv  r_test_res_condition+group_condition.csv  r_test_res_group_condition+group.csv
tests/data/large/: r_test_dispersions.csv  r_test_lfc_shrink_res.csv  r_test_res.csv  r_test_size_factors.csv  test_counts.csv  test_metadata.csv
tests/data/large_counts/: r_test_dispersions.csv  r_test_lfc_shrink_res.csv  r_test_res.csv  r_test_size_factors.csv
tests/data/multi_factor/: r_test_dispersions.csv  r_test_lfc_shrink_res.csv  r_test_res.csv  r_test_res_outliers.csv  r_test_size_factors.csv  test_counts.csv
tests/data/pytximport/: test_counts.csv  (+1 more)
(+28 files in other folders)
